# OpenglLearnCpp

./: CMakeLists.txt  README.md  main.cpp  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
